--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-reaktor51_led.kicad_prl
-fp-info-cache
-reaktor51_led-backups/
+001_reaktor51_r_led/reaktor51_led.kicad_prl
+001_reaktor51_r_led/fp-info-cache
+001_reaktor51_r_led/reaktor51_led-backups/
